tests/rosetta/transpiler/C/call-a-function-11.error
compile failed: exit status 1: /tmp/ctranspile4078185832/call-a-function-11.mochi.c: In function ‘_mem’:
/tmp/ctranspile4078185832/call-a-function-11.mochi.c:53:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   53 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile4078185832/call-a-function-11.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile4078185832/call-a-function-11.mochi.c: In function ‘user_main’:
/tmp/ctranspile4078185832/call-a-function-11.mochi.c:80:13: error: cast specifies array type
   80 |     zeroptr((long long[])box, box_len);
      |             ^

